--- a/style/home/home-style.css
+++ b/style/home/home-style.css
@@ -1,19 +1,88 @@
-.topimg {
-  position: relative;
+body {
+  background-color: #0B131E;
 }
 
-div.animation_box {
-  padding: 10px;
-  animation: fadeIn 5s ease 1s 1 normal backwards;
+
+  .thinkerAI {
+  font-size: 3em;
+  margin: 20px;
+  background: -webkit-linear-gradient(0deg, #05ffea 37%, #ff8661 , #d400ff 69%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Barlow', sans-serif;
+  text-align: center;
+}
+
+/* home-about-feedin-lift-right */
+
+/* feedin-left-font-top */
+  .feedin-left-font-top {
+    float: right;
+}
+
+/* feedin-top-img-right */
+  .feedin-top-img-right {
+    float: right;
+  }
+
+/* feedin-img-up */
+
+.feedin-img-up img {
+  width: 200px;
+}
+
+
+.feedin {
+  animation: feedIn-left 2s ease 1s 1 normal backwards;
 }
  
-@keyframes fadeIn {
+@keyframes feedIn-left {
   from {
     opacity: 0;
-    transform: translateX(20px);
+    transform: translateX(100px);
   }
   to {
     opacity: 1;
     transform: translateX(0);
   }
 }
+
+.block {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+.pp {
+  display: inline-block;
+  font-size: 60px;
+  font-family: 'Great Vibes', cursive;
+  padding: 0;
+  margin: 0;
+  color: #05ffea;
+}
+
+.block-one {
+  z-index: 1;
+}
+.block-two {
+  background-image: url(/image/a.png);
+  margin-top: 100px;
+  z-index: 2;
+}
+.block-three {
+  color: #fff;
+  z-index: 3;
+}
+.block-four {
+  z-index: 4;
+}
+.block .block-five {
+  color: #fff;
+  z-index: 5;
+}
+
