--- a/style/home/home-style.css
+++ b/style/home/home-style.css
@@ -13,40 +13,32 @@ body {
   text-align: center;
 }
 
-/* home-about-feedin-lift-right */
-
-/* feedin-left-font-top */
-  .feedin-left-font-top {
-    float: right;
+.AI-about-style { 
+  text-align: center;
 }
 
-/* feedin-top-img-right */
-  .feedin-top-img-right {
-    float: right;
-  }
-
-/* feedin-img-up */
-
-.feedin-img-up img {
+.AI-about-style a {
   width: 200px;
+  border: solid 2px #ffffff00;/*線*/
+  border-radius: 10px;/*角の丸み*/
+  font-family: 'Barlow', sans-serif;
+  font-size: 2.5em;
+  margin: 20px;
+  padding-left: 10px;
+  text-decoration: none;
+  padding-right: 10px;
+  background-color: #05ffea;
 }
 
 
-.feedin {
-  animation: feedIn-left 2s ease 1s 1 normal backwards;
-}
- 
-@keyframes feedIn-left {
-  from {
-    opacity: 0;
-    transform: translateX(100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
+.AI-about-style a:hover { 
+  color: white;
+  background: -webkit-linear-gradient(0deg, #05ffea 37%, #ff8661 , #d400ff 69%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
+/* 要素固定 */
 .block {
   width: 100%;
   height: 100vh;
@@ -57,21 +49,13 @@ body {
   position: sticky;
   top: 0;
 }
-.pp {
-  display: inline-block;
-  font-size: 60px;
-  font-family: 'Great Vibes', cursive;
-  padding: 0;
-  margin: 0;
-  color: #05ffea;
-}
 
 .block-one {
   z-index: 1;
 }
 .block-two {
-  background-image: url(/image/a.png);
-  margin-top: 80px;
+  background-image: url(https://thinking-grp.github.io/thinkerAI-site/image/a.png);
+  margin-top: 200px;
   z-index: 2;
 }
 .block-three {
