--- a/style/home/home-style.css
+++ b/style/home/home-style.css
@@ -1,8 +1,9 @@
 body {
   background-color: #0B131E;
 }
+/* 要素固定 */
 
-
+/* top-one */
   .thinkerAI {
   font-size: 3em;
   margin: 20px;
@@ -13,32 +14,8 @@ body {
   text-align: center;
 }
 
-.AI-about-style { 
-  text-align: center;
-}
+/* top-two */
 
-.AI-about-style a {
-  width: 200px;
-  border: solid 2px #ffffff00;/*線*/
-  border-radius: 10px;/*角の丸み*/
-  font-family: 'Barlow', sans-serif;
-  font-size: 2.5em;
-  margin: 20px;
-  padding-left: 10px;
-  text-decoration: none;
-  padding-right: 10px;
-  background-color: #05ffea;
-  transition: 0.3s;
-  color: #000;
-}
-
-
-.AI-about-style a:hover { 
-  color: #fff;
-  background-color: #000;
-}
-
-/* 要素固定 */
 .block {
   width: 100%;
   height: 100vh;
@@ -53,20 +30,28 @@ body {
 .block-one {
   z-index: 1;
 }
+
 .block-two {
   background-image: url(https://thinking-grp.github.io/thinkerAI-site/image/a.png);
   margin-top: 200px;
   z-index: 2;
 }
+
 .block-three {
   color: #fff;
   z-index: 3;
 }
+
+.block-three.topthree0 {
+  z-index: 0;
+}
+
 .block-four {
+  color: #ffffff;
   z-index: 4;
 }
-.block .block-five {
+
+.block-five {
   color: #fff;
   z-index: 5;
 }
-
