--- a/style/home/home-style.css
+++ b/style/home/home-style.css
@@ -3,25 +3,10 @@ body {
 }
 /* 要素固定 */
 
-/* top-one */
-  .thinkerAI {
-  font-size: 3em;
-  margin: 20px;
-  background: -webkit-linear-gradient(0deg, #05ffea 37%, #ff8661 , #d400ff 69%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: 'Barlow', sans-serif;
-  text-align: center;
-}
-
-/* top-two */
-
 .block {
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -32,6 +17,12 @@ body {
 }
 
 .block-two {
-  background-color: #000000;
+  background-color: #ffffff;
   z-index: 2;
+}
+
+.two {
+  margin-top: 200px;
+  margin-left: 100px;
+  font-size: 1.5em;
 }
